--- a/summative-1-jojo-yi-nara/.gitignore
+++ b/summative-1-jojo-yi-nara/.gitignore
@@ -3,8 +3,6 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!**/src/main/resources/
-!**/src/test/resources/
 
 ### STS ###
 .apt_generated
@@ -30,6 +28,11 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
+### Resources ###
+/src/main/resources/*.properties
+/src/test/resources/*.properties
+
 
 ### VS Code ###
 .vscode/
